# cbb_2d

./: .gitignore  Cargo.toml  README.md
examples/square_game/: main.rs
src/: lib.rs  sys_osd.rs  universe.rs  world.rs
src/base/: any.rs  dynamic.rs  game_object.rs  mod.rs
src/objects/: collectible.rs  collidable_type.rs  mod.rs  player.rs  player_mode.rs  wall.rs
src/sys_collision/: collidable.rs  mod.rs  sys_collision.rs
src/sys_event/: event.rs  event_queue.rs  mod.rs  publisher.rs  subscriber.rs  sys_event.rs
src/sys_input/: mod.rs  sys_input.rs
